# Resume-Tailor

./: .env  Create_a_file_in_GitHub.py  Dockerfile  README.md  Readme.md  app.py  endpoints.py  login.py  main.py  requirements.txt
alembic/: env.py
app/: dependencies.py  main.py
app/core/: config.py  database.py
app/models/: __init__.py  user.py
app/routers/: __init__.py  user_router.py
app/schemas/: user.py
app/services/: user_service.py
app/utils/: logger.py  security.py
resume-tailor/: Dockerfile  README.md  config.py  langgraph_agent.py  main.py  pyproject.toml  requirements.txt
resume-tailor/routers/: health.py
resume-tailor/services/: resume_service.py
resume-tailor/tests/: test_resume.py
tests/: __init__.py  test_user.py
